--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<img src="fragimage.jpg" alt=frag> 
+<img src="fragimage.jpg" alt=frag style="width: 1066.66667; height:600;"> 
 <body>
 
 <audio autoplay loop>
