--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<img src="fragimage.jpg" alt=frag style="width: 525; height:300;"> 
+<img src="fragimage.jpg" alt=frag width="525px" height="300px"> 
 <body>
 
 <audio autoplay loop>
