--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<img src="" alt=frag align="center" width="525" height="300"> 
+<img src="fragimage" alt=frag align="center" width="525" height="300"> 
 <body>
 
 <audio autoplay loop>
