--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 <title>Jebhook Forever</title>
+<style> 
+  img {
+    display: block;
+    margin: auto;
+    width: 40%;
+  } 
+</style>
 </head>
 
 <body>
