--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<img src="fragimage.jpg" alt=frag align="center" width="1000" height="450"> 
+<img src="fragimage.jpg" alt=frag> 
 <body>
 
 <audio autoplay loop>
