--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
+  <header> JEBHOOK: THE VERY BEST </header>
 <img src="fragimage.jpg" alt=frag> 
+  
+  <p> With never-before-seen epic features, you can frag on.</p>
 <body>
 
 <audio autoplay loop>
