--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     margin: auto;
     width: 70%;
   } 
+  p{
+    text-align: center;
+  }
+  header{
+    text-align: center;
+    letter-spacing: 2px;
+  }
+  body{
+    background-image: url("ownage.jpg");
+  }
 </style>
 </head>
 
