--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   header{
     text-align: center;
     letter-spacing: 2px;
+    font-size: 150%;
   }
   body{
     background-image: url("ownage.jpg");
@@ -22,7 +23,7 @@
 </head>
 
 <body>
-  <header> JEBHOOK: THE VERY BEST </header>
+  <header> <b>JEBHOOK: THE VERY BEST </b> </header>
 <img src="fragimage.jpg" alt=frag> 
   
   <p> With never-before-seen epic features, you can frag on.</p>
