--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   } 
   p{
     text-align: center;
+    background-color: lightblue;
   }
   header{
     text-align: center;
     letter-spacing: 2px;
     font-size: 150%;
+    background-color: lightblue;
   }
   body{
     background-image: url("ownage.jpg");
