--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 
 <body>
-  <header> <b>JEBHOOK: THE VERY BEST </b> </header>
-<img src="fragimage.jpg" alt=frag> 
+  <header> <b> JEBHOOK: THE VERY BEST </b> </header>
+  <a href="https://en.wiktionary.org/wiki/frag"> <img src="fragimage.jpg" alt=frag> </a>
   
   <p> With never-before-seen epic features, you can frag on.</p>
 <body>
