--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   } 
   p{
     text-align: center;
-    background-color: lightblue;
+    background: (35, 35, 35, 0.7);
+    padding-left: 20px;
+    padding-right: 20px;
   }
   header{
     text-align: center;
