--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   p{
     text-align: center;
     background: (35, 35, 35, 0.7);
+    color: rgb(0,0,255)
     padding-left: 20px;
     padding-right: 20px;
   }
