--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   } 
   p{
     text-align: center;
-    background: (35, 35, 35, 0.7);
+    background-color: rgb(40, 40, 40);
     color: rgb(255,255,255)
     padding-left: 20px;
     padding-right: 20px;
