--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   p{
     text-align: center;
     background-color: rgb(40, 40, 40);
-    color: rgb(255,255,255)
+    color: #ffffff;
     padding-left: 20px;
     padding-right: 20px;
   }
