--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ function funnyfunction(){
   <header id="funnyheader"> <b> JEBHOOK: THE VERY BEST </b> </header>
   <a href="https://en.wiktionary.org/wiki/frag"> <img src="fragimage.jpg" alt=frag> </a>
   <p> With never-before-seen epic features, you can frag on.</p>
+	<a href="Official Jebhook Steam Group"><p>Official Steam Group</p></a>
   <button id="funnybutton" onclick="funnyfunction()">JEBHOOK</button>
 <body>
 
