--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@ function funnyfunction(){
 </head>
 
 <body>
+	
   <header id="funnyheader"> <b> JEBHOOK: THE VERY BEST </b> </header>
   <a href="https://en.wiktionary.org/wiki/frag"> <img src="fragimage.jpg" alt=frag> </a>
-  <p> With never-before-seen epic features, you can frag on.</p>
-	<a href="http://steamcommunity.com/groups/JebhookOfficial"><p>Official Steam Group</p></a>
+  <p> With never-before-seen epic features, you can frag on. 
+  <a href="http://steamcommunity.com/groups/JebhookOfficial"><br>Link To Official Steam Group</a>
+  </p>
+	
   <button id="funnybutton" onclick="funnyfunction()">JEBHOOK</button>
 <body>
 
