--- a/index.html
+++ b/index.html
@@ -44,15 +44,18 @@ function funnyfunction(){
     display : block;
  
   }
+  
+  #grouplink{
+	color: white;
+  }
 </style>
 </head>
 
 <body>
-	
   <header id="funnyheader"> <b> JEBHOOK: THE VERY BEST </b> </header>
   <a href="https://en.wiktionary.org/wiki/frag"> <img src="fragimage.jpg" alt=frag> </a>
   <p> With never-before-seen epic features, you can frag on. 
-  <a href="http://steamcommunity.com/groups/JebhookOfficial"><br>Link To Official Steam Group</a>
+  <a href="http://steamcommunity.com/groups/JebhookOfficial" id="grouplink"><br>Link To Official Steam Group</a>
   </p>
 	
   <button id="funnybutton" onclick="funnyfunction()">JEBHOOK</button>
