--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@ function FunnyFunction(){
 
 </script>
 <style> 
-  img {
+  #fragimage {
     display: block;
     margin: auto;
     width: 70%;
   } 
+  #fraglink {
+    display: inline-block;
+    width: 70%;	  
+  }
   p{
     text-align: center;
     background: rgba(25, 25, 25, 0.85);
@@ -66,7 +70,7 @@ function FunnyFunction(){
 
 <body onload="FunnyFunction()">
   <header id="funnyheader"> <b> JEBHOOK: THE VERY BEST </b> </header>
-  <a href="https://en.wiktionary.org/wiki/frag"> <img src="fragimage.jpg" alt=frag> </a>
+  <a href="https://en.wiktionary.org/wiki/frag" id="fraglink"> <img src="fragimage.jpg" id="fragimage" alt=frag> </a>
   <p> With never-before-seen epic features, you can frag on. 
   <a href="http://steamcommunity.com/groups/JebhookOfficial" id="grouplink"><br>Link To Official Steam Group</a>
   </p>
