--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@ function FunnyFunction(){
 <body onload="FunnyFunction()">
   <header id="funnyheader"> <b> JEBHOOK: THE VERY BEST </b> </header>
   <a href="https://en.wiktionary.org/wiki/frag" id="fraglink"> <img src="fragimage.jpg" id="fragimage" alt=frag> </a>
-  <p> With never-before-seen epic features, you can frag on. 
+  <p> 
+  With never-before-seen epic features, you can frag on. 
   <a href="http://steamcommunity.com/groups/JebhookOfficial" id="grouplink"><br>Link To Official Steam Group</a>
+  <br>If you want to get Jebhook, add the admin of the steam group to see if we can arrange something. 
   </p>
 	
   <button id="funnybutton" onclick="FunnyFunction()">JEBHOOK</button>
