--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ function FunnyFunction(){
   <p> 
   With never-before-seen epic features, you can frag on. 
   <a href="http://steamcommunity.com/groups/JebhookOfficial" id="grouplink"><br>Link To Official Steam Group</a>
-  <br>If you want to get Jebhook, add the admin of the steam group to see if we can arrange something. 
+  <br><a href="https://www.paypal.me/JebhookCSGO/20"><br>Get Jebhook (Add me first before buying)</a>
+  <br>If you want to get Jebhook, add the admin of the steam group <b>THEN</b>, once I give the go-ahead, use the above link to gift me money. 
   </p>
 	
   <button id="funnybutton" onclick="FunnyFunction()">JEBHOOK</button>
