--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function FunnyFunction(){
  
   }
   
-  #grouplink{
+  .grouplink{
 	color: white;
   }
 </style>
@@ -73,8 +73,8 @@ function FunnyFunction(){
   <a href="https://en.wiktionary.org/wiki/frag" id="fraglink"> <img src="fragimage.jpg" id="fragimage" alt=frag> </a>
   <p> 
   With never-before-seen epic features, you can frag on. 
-  <a href="http://steamcommunity.com/groups/JebhookOfficial" id="grouplink"><br>Link To Official Steam Group</a>
-  <br><a href="https://www.paypal.me/JebhookCSGO/20"><br>Get Jebhook (Add me first before buying)</a>
+  <a href="http://steamcommunity.com/groups/JebhookOfficial" class="grouplink"><br>Link To Official Steam Group</a>
+  <br><a href="https://www.paypal.me/JebhookCSGO/20" class="grouplink"><br>Get Jebhook (Add me first before buying)</a>
   <br>If you want to get Jebhook, add the admin of the steam group <b>THEN</b>, once I give the go-ahead, use the above link to gift me money. 
   </p>
 	
