--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ function FunnyFunction(){
   <a href="http://steamcommunity.com/groups/JebhookOfficial" class="grouplink"><br>Link To Official Steam Group</a>
   <br><a href="https://www.paypal.me/JebhookCSGO/20" class="grouplink"><br>Get Jebhook (Add me first before buying)</a>
   <br>If you want to get Jebhook, add the admin of the steam group <b>THEN</b>, once I give the go-ahead, use the above link to gift me money. 
+  <br>Get your official Jebhook merchandise here <a href="https://teespring.com/stores/jebhook-gear">here</a>
   </p>
 	
   <button id="funnybutton" onclick="FunnyFunction()">JEBHOOK</button>
