--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ function FunnyFunction(){
   #fragimage {
     display: block;
     margin: auto;
+    text-align: center;  
     width: 70%;
   } 
   #fraglink {
